# PyIPTV

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PYPI_INSTRUCTIONS.md  README.md  RECORDING_GUIDE.md  debug_subtitle_detection.py  download_ffmpeg.py  manual_ffmpeg_setup.py  pyproject.toml  test_channel_logos.py  test_enhanced_features.py  test_geolocation_features.py
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst
iptv_player/: __init__.py  m3u_parser.py  main.py  qmedia_player.py  settings_manager.py
iptv_player/ui/: __init__.py  main_window.py  themes.py
iptv_player/ui/components/: __init__.py  audio_track_selector.py  category_list.py  channel_list.py  enhanced_controls.py  enhanced_progress_dialog.py  metadata_display.py  video_placeholder.py  virtualized_channel_list.py
pyiptv/: advanced_search.py  auto_updater.py  cache_manager.py  enhanced_subtitle_manager.py  favorites_manager.py  ffmpeg_manager.py  geolocation_manager.py  link_validator.py  m3u_parser.py  main.py  playlist_manager.py  qmedia_player.py  recording_manager.py  settings_manager.py  subtitle_manager.py
pyiptv/ui/: main_window.py  playlist_manager_window.py  themes.py  url_download_worker.py
pyiptv/ui/components/: audio_track_selector.py  channel_info_display.py  enhanced_channel_list.py  enhanced_controls.py  ffmpeg_setup_dialog.py  metadata_display.py  recording_status_widget.py  simplified_operations.py  subtitle_widget.py  unified_status_system.py  video_placeholder.py  virtualized_channel_list.py
pyptv/: __init__.py  cache_manager.py  main.py  playlist_manager.py  settings_manager.py
pyptv/ui/: __init__.py  main_window.py  playlist_manager_window.py
pyptv/ui/components/: __init__.py  video_placeholder.py
scripts/: dev.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_ui_components.py
tests/unit/: __init__.py  test_favorites_manager.py  test_m3u_parser.py  test_playlist_manager.py  test_settings_manager.py  test_subtitle_manager.py
