[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyptv"
version = "1.0.0"
description = "A modern IPTV player built with PySide6"
readme = "README.md"
license = "MIT"
authors = [
    {name = "David Markey", email = "david@dmarkey.com"}
]
maintainers = [
    {name = "David Markey", email = "david@dmarkey.com"}
]
keywords = [
    "iptv",
    "player",
    "streaming",
    "media",
    "m3u",
    "pyside6",
    "qt"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Multimedia :: Video :: Playback",
    "Environment :: X11 Applications :: Qt",
]
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/dmarkey/Pyptv"
Repository = "https://github.com/dmarkey/Pyptv"
Issues = "https://github.com/dmarkey/Pyptv/issues"
Documentation = "https://github.com/dmarkey/Pyptv#readme"

[project.scripts]
pyptv = "pyptv.main:main"

[tool.setuptools.packages.find]
include = ["pyptv*"]

[tool.setuptools.package-data]
pyptv = ["ui/images/*.png", "ui/images/*.ico", "ui/images/*.svg"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pyptv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"